@@ -4,6 +4,15 @@ AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO 
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
 2007/04/13
+	* Changed the meaning of inf2=0x1000. Now it is used to "disable usage on
+	  enemies", which only works for non-aggressive (inf!=1) skills.
+	* If a skill is party/guild only (inf2 0x400/0x800) it will also be
+	  castable on enemies if the skill's inf is 1 (offensive target)
+	* Corrected the mob behaviour when it locks into an enemy it can't chase.
+	  Previously it would get stuck on a lock->unlock->lock loop, with each
+	  unlock resetting the "random walk" timer, causing the mob to just idle in
+	  place. Now they will attempt idle skills and no longer reset the "random
+	  walk" timer, so they behave as if they were in Idle state properly.
 	* Now the bonus bAtkEle will be transferred directly to the weapon when the
 	  script is in the ammunition, and you are wielding a weapon that consumes
 	  ammo per atttack.
